// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas en Product Title debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    compra
  </span>
</div>
`;

exports[`pruebas en Product Title debe de mostrar el componente correctamente con el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
  hola
</span>
`;
